<resources>
    <string name="app_name">Auxby</string>
    <string name="onboarding_title_1">Search</string>
    <string name="onboarding_body_1">Get ready to explore a universe of offers! Dive into our world with just a simple swipe! 🌟</string>
    <string name="onboarding_title_2">Bid or Buy</string>
    <string name="onboarding_body_2">Get in the game to win! Join exciting auctions with bold bids or choose the path of instant victory through fixed-price purchases! 🚀</string>
    <string name="onboarding_title_3">Win</string>
    <string name="onboarding_body_3">Victory is yours! Triumph in thrilling auctions and reap the rewards of your skills! 🏆</string>
    <string name="skip">Skip</string>
    <string name="join_auxby">Join Auxby</string>
    <string name="already_registered">Already registered?</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="login">Login</string>
    <string name="enter_your_account_details_below">Enter your account details below.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="agree_with">Agree with</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="login_with_google">Login with Google</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_password">Invalid password</string>
    <string name="passwords_not_matching">Passwords don\'t match</string>
    <string name="forgot_password">Forgot password</string>
    <string name="password_reset_link_sent_to_you_email_address">Password reset link sent to you email address.</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="back_to_log_in">Back to Log in</string>
    <string name="create_account">Create account</string>
    <string name="sign_up_for_free_and_become_a_member">Sign up for free and become a member.</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="invalid_field">Invalid format</string>
    <string name="optional">Optional</string>
    <string name="your_password">Your password</string>
    <string name="create_a_password_for_your_account">Create a password for your account.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="your_password_has_to_include">Your password has to include:\n8 characters\n1 capital letter\n1 small letter\n1 number</string>
    <string name="sign_up">Sign Up</string>
    <string name="check_your_email">Check your email</string>
    <string name="confirmation_link_sent_to"><![CDATA[We’ve sent a verification link to your email \n<font color=\'#FEB739\'>%1$s</font><br><br>\n\n.Once verified you’ll be able to continue]]></string>
    <string name="open_mail_app">Open Mail App</string>
    <string name="not_working">Not working?</string>
    <string name="resend_email"><u>Resend Email</u></string>
    <string name="choose_email_app">Choose email app</string>
    <string name="no_email_apps_installed">Couldn\'t find any email apps installed.</string>
    <string name="error_title">Error</string>
    <string name="success_title">Success</string>
    <string name="ok">OK</string>
    <string name="reset_link_sent">A reset link has been sent to your email address, please check your inbox.</string>
    <string name="password_is_valid">Password is valid</string>
    <string name="passwords_should_the_same">The passwords should be the same.</string>
    <string name="text_user_already_exists">This email is already used</string>
    <string name="new_mail_has_been_sent">A new email has been sent</string>
    <string name="offers">Offers</string>
    <string name="favourite">Favorite</string>
    <string name="chat">Chat</string>
    <string name="my_bids">My Bids</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="buy_coins">Buy coins</string>
    <string name="your_offers">Your offers</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="policies_agreements"><![CDATA[Policies & Agreements]]></string>
    <string name="log_out">Log out</string>
    <string name="auxby_ro">https://www.auxby.ro/</string>
    <string name="auxby_ro_title">www.auxby.ro</string>
    <string name="app_version">"Version : %1$s"</string>
    <string name="auxby_bid_and_buy">Auxby\nBid and Buy</string>
    <string name="see_everything_auxby_has_to_offer">See everything Auxby has to offer. Register an account or simply log in.</string>
    <string name="register">Register</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="newest">Newest Offers</string>
    <string name="number_of_offers">"%1$d offers"</string>
    <string name="no_offers">"No offers"</string>
    <string name="one_offer">1 offer</string>
    <string name="offer_price_value">%1$s%2$s</string>
    <string name="current_bid">Current bid</string>
    <string name="price">Price</string>
    <string name="bidders_and_others">… and %1$s others</string>
    <string name="search_by_category_name">Search by category name</string>
    <string name="search_empty_result_message"><![CDATA[We couldn\'t find anything for <b><font color=#4B86B4>%1$s</font></b>. Update your search and try again.]]></string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out_description">Are you sure you want to log out?</string>
    <string name="delete_account_description"><b>Are you sure?</b>\nIf you close your account you will lose all your coins and you will not be able to login again!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="full_address">%1$s, %2$s</string>
    <string name="first_and_last_name">%1$s %2$s</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="coins_amount">%1$s coins</string>
    <string name="text_english">English</string>
    <string name="text_romanian">Romanian</string>
    <string name="change_password">Change password</string>
    <string name="create_new_password">Create a new password for your account.</string>
    <string name="your_new_pwd_cannot_be_the_same">The new password cannot be the same as the old password</string>
    <string name="allow_permission_manually">You need to allow necessary permissions in Settings manually</string>
    <string name="permission_denied_avatar">Permission denied, unable to edit profile picture.</string>
    <string name="unable_to_update_profile_picture">Unable to update profile picture. Please try again later.</string>
    <string name="choose_offer">Choose the offer that suits you the most</string>
    <string name="buy">Buy</string>
    <string name="profile_changes_saved">Profile changes successfully saved</string>
    <string name="profile_changes_error">Unable to save changes. Please try again.</string>
    <string name="delete_account_error">Delete account error. Please try again!</string>
    <string name="text_language">Language</string>
    <string name="text_newsletter">Newsletter</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="add_offer">Add offer</string>
    <string name="select_category">Select category*</string>
    <string name="offer_category">Offer Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="offer_details">Offer Details</string>
    <string name="offer_title">Title*</string>
    <string name="offer_title_hint">I sell my phone</string>
    <string name="offer_type">Offer Type*</string>
    <string name="auction">Auction</string>
    <string name="fix_price">Fix price</string>
    <string name="offer_price">Price*</string>
    <string name="condition">Condition*</string>
    <string name="condition_new">New</string>
    <string name="condition_used">Used</string>
    <string name="photos">Photos: %1$s</string>
    <string name="description_mandatory">Description*</string>
    <string name="description">Description</string>
    <string name="category_details">Category Details</string>
    <string name="contact_info">Contact Info</string>
    <string name="location_mandatory">Location*</string>
    <string name="location">Location</string>
    <string name="offer_phone_number">Phone number*</string>
    <string name="offer_owner_type">Type*</string>
    <string name="individual">Individual</string>
    <string name="business">Business</string>
    <string name="text_continue">Continue</string>
    <string name="end_date">End date*</string>
    <string name="select_or_take_picture">Select or take a new Picture</string>
    <string name="select_picture">Select Picture</string>
    <string name="error_avatar_uploading">Error avatar uploading</string>
    <string name="text_field_required">This field is required</string>
    <string name="password_change_success">Password changed successfully</string>
    <string name="password_change_error">Unable to changed password. Please try again.</string>
    <string name="read_more">read more</string>
    <string name="report_offer"><u>Report offer</u></string>
    <string name="read_less">real less</string>
    <string name="follow_us">Follow us:</string>
    <string name="item_number">Item number: %1$s</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="publish_for_n_coins">Publish for %1$s</string>
    <string name="your_bid">Your bid</string>
    <string name="place_bid">Place Bid</string>
    <string name="this_is_a_preview_of_your_offer">This is a preview of your offer</string>
    <string name="start_price">Start price</string>
    <string name="number_of_views">%1$s views</string>
    <string name="active_at">Active %1$s</string>
    <string name="active_today_at">Active today at %1$s</string>
    <string name="active_yesterday_at">Active yesterday la %1$s</string>
    <string name="self_extension">Self Extension</string>
    <string name="the_offer_expires_in_30_days">The offer expires in 30 days</string>
    <string name="no_internet_connection">Oops, No internet Connection</string>
    <string name="congrats">Congrats</string>
    <string name="by_making_your_voice_heard">By making your voice heard,\nyou also help others</string>
    <string name="my_offers">My offers</string>
    <string name="available_coins">Available coins : %1$s</string>
    <string name="no_search_results">Oh no!</string>
    <string name="opps_no_offers_found">Opps, No offers found</string>
    <string name="try_searching_by_offer_title_check_spelling">• Try searching by offer title\n• Check spelling</string>
    <string name="no_internet_connection_description">Make sure wifi or cellular data is turned on and then try again.</string>
    <string name="try_again">Try again</string>
    <string name="close">Close</string>
</resources>