<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_white"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/space_150dp"
            android:layout_height="@dimen/space_150dp"
            android:src="@drawable/ic_info_guest_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoInternetTitle"
            style="@style/TextMontserratSemiBold20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_15dp"
            android:text="@string/no_internet_connection" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoInternetDescription"
            style="@style/TextMontserratMedium16spLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_15dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/space_32dp"
            android:text="@string/no_internet_connection_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTryAgain"
            style="@style/primaryDarkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_25dp"
            android:layout_marginTop="@dimen/space_100dp"
            android:text="@string/try_again"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>