<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCongratsIllustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_80dp"
        android:src="@drawable/bg_congrats_ilustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCongrats"
        style="@style/TextMontserratSemiBold20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30dp"
        android:text="@string/congrats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCongratsIllustration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCongratsSubtitle"
        style="@style/TextMontserratSemiBold15spLight"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_20dp"
        android:gravity="center"
        android:paddingTop="@dimen/space_6dp"
        android:text="@string/by_making_your_voice_heard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCongrats" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClose"
        style="@style/primaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_80dp"
        android:layout_marginBottom="@dimen/space_60dp"
        android:drawablePadding="@dimen/space_12dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCongratsSubtitle"
        app:loaderColor="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>